# opus_flutter

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build_opus.sh
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  code-quality.md  ffi-analysis.md  issues-and-improvements.md
opus_dart/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
opus_dart/lib/: opus_codec_dart.dart  opus_dart.dart
opus_dart/test/: opus_dart_mock_test.dart  opus_dart_mock_test.mocks.dart  opus_dart_streaming_mock_test.dart  opus_dart_streaming_test.dart  opus_dart_test.dart  opus_defines_test.dart
opus_flutter/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml  pubspec_overrides.yaml
opus_flutter/example/: README.md  pubspec.yaml
opus_flutter_android/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
opus_flutter_android/android/: CMakeLists.txt  build.gradle
opus_flutter_ios/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
opus_flutter_linux/: CHANGELOG.md  Dockerfile  LICENSE  README.md  pubspec.yaml
opus_flutter_macos/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
opus_flutter_platform_interface/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
opus_flutter_web/: CHANGELOG.md  Dockerfile  LICENSE  README.md  opus_ctl_wrapper.c  pubspec.yaml
opus_flutter_windows/: CHANGELOG.md  Dockerfile  LICENSE  README.md  pubspec.yaml
scripts/: analyze.sh  check_dependencies.sh  common.sh  format.sh  prepare_publish.dart  publish.sh  run.sh  sync_changelogs.sh  unit_tests.sh
(+105 files in other folders)
